--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
     "@types/eslint": "^8.56.10",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
