implement import and download

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
 			},
 			"style": {
 				"useSelfClosingElements": "off",
-				"noUnusedTemplateLiteral": "off"
+				"noUnusedTemplateLiteral": "off",
+				"noNonNullAssertion": "off"
 			},
 			"suspicious": {
 				"noArrayIndexKey": "off",
