--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@icons-pack/react-simple-icons": "^10.0.0",
 		"@prisma/client": "^5.14.0",
+		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -39,9 +40,11 @@
 		"lucide-react": "^0.445.0",
 		"next": "^14.2.4",
 		"next-auth": "^4.24.7",
+		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
+		"sonner": "^1.5.0",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
