--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"db:studio": "prisma studio",
 		"dev": "next dev",
 		"lint": "next lint",
-		"start": "next start"
+		"start": "next start",
+		"format": "biome format --write"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.6.0",
