--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^8.1.0",
 		"@typescript-eslint/parser": "^8.1.0",
+		"@welldone-software/why-did-you-render": "^8.0.3",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.2.4",
 		"postcss": "^8.4.39",
