--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"@trpc/next": "^11.0.0-rc.446",
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
+		"acorn": "^8.14.0",
+		"acorn-walk": "^8.3.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.3.0",
